worked on update score - created a post route to be able to check post score.